@@ -16,13 +16,20 @@
  * limitations under the License.
  */
 
+def discardDaysToKeep = '365'
+def discardNumToKeep = '' // Unlimited
+if (env.BRANCH_NAME != 'master') {
+  discardDaysToKeep = '60'
+  discardNumToKeep = '5'
+}
 properties([
+    buildDiscarder(logRotator(daysToKeepStr: discardDaysToKeep, numToKeepStr: discardNumToKeep)),
     // max 5 build/branch/day
     rateLimitBuilds(throttle: [count: 5, durationName: 'day', userBoost: true]),
     // do not run multiple testruns on the same branch
     disableConcurrentBuilds(),
     parameters([
-        string(name: 'SPLIT', defaultValue: '20', description: 'Number of buckets to split tests into.'),
+        string(name: 'SPLIT', defaultValue: '22', description: 'Number of buckets to split tests into.'),
         string(name: 'OPTS', defaultValue: '', description: 'additional maven opts'),
     ])
 ])
@@ -67,7 +74,7 @@ setPrLabel("PENDING");
 
 def executorNode(run) {
   hdbPodTemplate {
-    timeout(time: 6, unit: 'HOURS') {
+    timeout(time: 12, unit: 'HOURS') {
       node(POD_LABEL) {
         container('hdb') {
           run()
@@ -84,13 +91,14 @@ def buildHive(args) {
 set -x
 . /etc/profile.d/confs.sh
 export USER="`whoami`"
-export MAVEN_OPTS="-Xmx2g"
+export MAVEN_OPTS="-Xmx4G"
 export -n HIVE_CONF_DIR
-cp $SETTINGS .git/settings.xml
-OPTS=" -s $PWD/.git/settings.xml -B -Dtest.groups= "
-OPTS+=" -Pitests,qsplits,dist,errorProne,iceberg"
-OPTS+=" -Dorg.slf4j.simpleLogger.log.org.apache.maven.plugin.surefire.SurefirePlugin=INFO"
-OPTS+=" -Dmaven.repo.local=$PWD/.git/m2"
+sw java 21 && . /etc/profile.d/java.sh
+mkdir -p .m2/repository
+cp $SETTINGS .m2/settings.xml
+OPTS=" -s $PWD/.m2/settings.xml -B -Dtest.groups= "
+OPTS+=" -Pitests,qsplits,dist,errorProne"
+OPTS+=" -Dmaven.repo.local=$PWD/.m2/repository"
 git config extra.mavenOpts "$OPTS"
 OPTS=" $M_OPTS -Dmaven.test.failure.ignore "
 if [ -s inclusions.txt ]; then OPTS+=" -Dsurefire.includesFile=$PWD/inclusions.txt";fi
@@ -103,26 +111,52 @@ df -h
   }
 }
 
+def sonarAnalysis(args) {
+  withCredentials([string(credentialsId: 'sonar', variable: 'SONAR_TOKEN')]) {
+      def mvnCmd = """mvn org.sonarsource.scanner.maven:sonar-maven-plugin:5.1.0.4751:sonar \
+      -Dsonar.organization=apache \
+      -Dsonar.projectKey=apache_hive \
+      -Dsonar.host.url=https://sonarcloud.io \
+      -Dsonar.java.checkstyle.reportPaths=target/checkstyle-result.xml \
+      """+args+" -DskipTests -Dit.skipTests -Dmaven.javadoc.skip"
+
+      // Sonar scanner runs in a separate JVM so JAVA_OPTS (notably heap size)
+      // must be passed via the appropriate environment variable
+      sh """#!/bin/bash -e
+      sw java 21 && . /etc/profile.d/java.sh
+      export SONAR_SCANNER_JAVA_OPTS=-Xmx8g
+      """+mvnCmd
+  }
+}
+
 def hdbPodTemplate(closure) {
   podTemplate(
   containers: [
-    containerTemplate(name: 'hdb', image: 'kgyrtkirk/hive-dev-box:executor', ttyEnabled: true, command: 'tini -- cat',
+    containerTemplate(name: 'hdb', image: 'ayushtkn/hive-dev-box:executor', ttyEnabled: true, command: 'tini -- cat',
         alwaysPullImage: true,
         resourceRequestCpu: '1800m',
         resourceLimitCpu: '8000m',
         resourceRequestMemory: '6400Mi',
         resourceLimitMemory: '12000Mi',
+        resourceRequestEphemeralStorage: '15Gi',
+        resourceLimitEphemeralStorage: '30Gi',
         envVars: [
-            envVar(key: 'DOCKER_HOST', value: 'tcp://localhost:2375')
+            envVar(key: 'DOCKER_HOST', value: 'tcp://localhost:2376'),
+            envVar(key: 'DOCKER_TLS_VERIFY', value: '1'),
+            envVar(key: 'DOCKER_CERT_PATH', value: '/certs/client')
         ]
     ),
-    containerTemplate(name: 'dind', image: 'docker:18.05-dind',
+    containerTemplate(name: 'dind', image: 'docker:20.10-dind',
         alwaysPullImage: true,
         privileged: true,
+        envVars: [
+            envVar(key: 'DOCKER_TLS_CERTDIR', value: '/certs')
+        ]
     ),
   ],
   volumes: [
     emptyDirVolume(mountPath: '/var/lib/docker', memory: false),
+    emptyDirVolume(mountPath: '/certs', memory: false)
   ], yaml:'''
 spec:
   securityContext:
@@ -158,6 +192,15 @@ def jobWrappers(closure) {
   } finally {
     setPrLabel(finalLabel)
   }
+}
+
+def checkstyle() {
+  sh '''#!/bin/bash -e
+set -x
+sw java 21 && . /etc/profile.d/java.sh
+export MAVEN_OPTS="-Xmx6G"
+mvn checkstyle:checkstyle -Pitests
+'''
 }
 
 def saveWS() {
@@ -197,7 +240,7 @@ jobWrappers {
             $class: 'GitSCM',
             branches: scm.branches,
             doGenerateSubmoduleConfigurations: scm.doGenerateSubmoduleConfigurations,
-            extensions: scm.extensions,
+            extensions: [ cloneOption(honorRefspec: true, depth: 50, noTags: true, shallow: true) ],
             userRemoteConfigs: scm.userRemoteConfigs + [[
               name: 'origin',
               refspec: scm.userRemoteConfigs[0].refspec+ " +refs/heads/${CHANGE_TARGET}:refs/remotes/origin/target",
@@ -223,10 +266,8 @@ git merge origin/target
       }
       stage('Prechecks') {
         def spotbugsProjects = [
-            ":hive-common",
             ":hive-shims",
             ":hive-storage-api",
-            ":hive-standalone-metastore-common",
             ":hive-service-rpc"
         ]
         sh '''#!/bin/bash
@@ -239,7 +280,7 @@ if [ $n != 0 ]; then
   exit 1
 fi
 '''
-        buildHive("-Pspotbugs -pl " + spotbugsProjects.join(",") + " -am test-compile com.github.spotbugs:spotbugs-maven-plugin:4.0.0:check")
+        buildHive("-Pspotbugs -pl " + spotbugsProjects.join(",") + " -am test-compile com.github.spotbugs:spotbugs-maven-plugin:4.8.6.6:check")
       }
       stage('Compile') {
         buildHive("install -Dtest=noMatches")
@@ -257,7 +298,7 @@ fi
   }
 
   def branches = [:]
-  for (def d in ['derby','postgres',/*'mysql',*/'oracle']) {
+  for (def d in ['derby','postgres',/*'mysql','oracle'*/]) {
     def dbType=d
     def splitName = "init@$dbType"
     branches[splitName] = {
@@ -268,13 +309,14 @@ fi
         stage('init-metastore') {
            withEnv(["dbType=$dbType"]) {
              sh '''#!/bin/bash -e
+             sw java 21 && . /etc/profile.d/java.sh
 set -x
 echo 127.0.0.1 dev_$dbType | sudo tee -a /etc/hosts
 . /etc/profile.d/confs.sh
 sw hive-dev $PWD
-ping -c2 dev_$dbType
 export DOCKER_NETWORK=host
 export DBNAME=metastore
+export HADOOP_CLIENT_OPTS="--add-opens java.base/java.net=ALL-UNNAMED"
 reinit_metastore $dbType
 time docker rm -f dev_$dbType || true
 '''
@@ -300,8 +342,39 @@ dev-support/nightly
 set -e
 tar -xzf packaging/target/apache-hive-*-nightly-*-src.tar.gz
 '''
-            buildHive("install -Dtest=noMatches -Pdist,iceberg -f apache-hive-*-nightly-*/pom.xml")
+            buildHive("install -Dtest=noMatches -Pdist -f apache-hive-*-nightly-*/pom.xml")
         }
+      }
+  }
+  branches['sonar'] = {
+      executorNode {
+          if(env.BRANCH_NAME == 'master') {
+              stage('Prepare') {
+                  loadWS();
+              }
+              stage('Checkstyle') {
+                  checkstyle()
+              }
+              stage('Sonar') {
+                  sonarAnalysis("-Dsonar.branch.name=${BRANCH_NAME}")
+              }
+          } else if(env.CHANGE_ID) {
+              stage('Prepare') {
+                  loadWS();
+              }
+              stage('Checkstyle') {
+                  checkstyle()
+              }
+              stage('Sonar') {
+                  sonarAnalysis("""-Dsonar.pullrequest.github.repository=apache/hive \
+                                   -Dsonar.pullrequest.key=${CHANGE_ID} \
+                                   -Dsonar.pullrequest.branch=${CHANGE_BRANCH} \
+                                   -Dsonar.pullrequest.base=${CHANGE_TARGET} \
+                                   -Dsonar.pullrequest.provider=GitHub""")
+              }
+          } else {
+              echo "Skipping sonar analysis, we only run it on PRs and on the master branch, found ${env.BRANCH_NAME}"
+          }
       }
   }
   for (int i = 0; i < splits.size(); i++) {
@@ -318,14 +391,18 @@ tar -xzf packaging/target/apache-hive-*-nightly-*-src.tar.gz
         }
         try {
           stage('Test') {
-            buildHive("org.apache.maven.plugins:maven-antrun-plugin:run@{define-classpath,setup-test-dirs,setup-metastore-scripts} org.apache.maven.plugins:maven-surefire-plugin:test -q")
+            buildHive("org.apache.maven.plugins:maven-antrun-plugin:run@{define-classpath,setup-test-dirs,setup-metastore-scripts} org.apache.maven.plugins:maven-surefire-plugin:test")
           }
         } finally {
           stage('PostProcess') {
             try {
               sh """#!/bin/bash -e
-                # removes all stdout and err for passed tests
-                xmlstarlet ed -L -d 'testsuite/testcase/system-out[count(../failure)=0]' -d 'testsuite/testcase/system-err[count(../failure)=0]' `find . -name 'TEST*xml' -path '*/surefire-reports/*'`
+                FAILED_FILES=`find . -name "TEST*xml" -exec grep -l "<failure" {} \\; 2>/dev/null | head -n 10`
+                for a in \$FAILED_FILES
+                do
+                  RENAME_TMP=`echo \$a | sed s/TEST-//g`
+                  mv \${RENAME_TMP/.xml/-output.txt} \${RENAME_TMP/.xml/-output-save.txt}
+                done
                 # remove all output.txt files
                 find . -name '*output.txt' -path '*/surefire-reports/*' -exec unlink "{}" \\;
               """
@@ -348,6 +425,7 @@ tar -xzf packaging/target/apache-hive-*-nightly-*-src.tar.gz
       }
       stage('Generate javadoc') {
           sh """#!/bin/bash -e
+          sw java 21 && . /etc/profile.d/java.sh
 mvn install javadoc:javadoc javadoc:aggregate -DskipTests -pl '!itests/hive-jmh,!itests/util'
 """
       }
